# AutoCog

./: .coverage  .dockerignore  .gitignore  .gitmodules  CMakeLists.txt  DEVEL.md  Dockerfile  Dockerfile.reflex  Dockerfile.ubi  Dockerfile.ubi-cuda  Dockerfile.ubuntu  README.md  pyproject.toml  setup.py  setup.sh
.github/workflows/: ci.yaml  release.yaml
bindings/: errors.hxx
bindings/backend-llama/: CMakeLists.txt  module.cxx
bindings/compiler-stl/: CMakeLists.txt  convert.cxx  convert.hxx  module.cxx
bindings/llama-xfta/: CMakeLists.txt  convert.cxx  convert.hxx  module.cxx
bindings/runtime-sta/: CMakeLists.txt  module.cxx
dockerfiles/: compose.yaml  ubi.df  ubuntu.df
docs/: README.md  stl-dev-environment.md
docs/compiler/: architecture.md  data-codec.md  runtime-semantics.md
docs/interfaces/: autocog-cli.md  formats.md  python-api.md  rest-api.md  tools-cli.md
docs/structured-thoughts/: language.md  overview.md  stdlib.md
libs/autocog/: build_info.hxx  logging.cxx  logging.hxx  python_sink.hxx
libs/autocog/backend/llama/: CMakeLists.txt  convert.cxx  convert.hxx  evaluation-choice.cxx  evaluation-completion.cxx  evaluation-text.cxx  evaluation.cxx  evaluation.hxx  manager.cxx  manager.hxx  model.cxx  model.hxx  prepared.cxx  prepared.hxx  types.hxx
libs/autocog/codec/: CMakeLists.txt  channel-json.cxx  channel-python.cxx  document-json.cxx  document-python.cxx  fta-json.cxx  fta-python.cxx  ftt-json.cxx  ftt-python.cxx  json.hxx  metadata-json.cxx  metadata-python.cxx  path-json.cxx  path-python.cxx  python.hxx  search-json.cxx  search-python.cxx  sta-json.cxx  sta-python.cxx  syntax-json.cxx  syntax-python.cxx  vocab-json.cxx  vocab-python.cxx
libs/autocog/compiler/stl/: CMakeLists.txt  ast.cxx  ast.hxx  binding.cxx  diagnostic.cxx  diagnostic.hxx  driver.cxx  driver.hxx  eval-utils.txx  evaluate.cxx  evaluate.hxx  evaluate.txx  instance-scanner.cxx  instance-scanner.hxx  instantiate.cxx  instantiate.hxx  instantiation-graph.cxx  instantiation-graph.hxx  ir.hxx  ir.proto  lexer.l  location.hxx  main.cxx  parser-state.cxx  parser.cxx  parser.hxx  serialize.hxx  symbol-scanner.cxx  symbol-scanner.hxx  symbol-table.cxx  symbol-table.hxx  symbols.cxx  symbols.hxx  symbols.txx  token.cxx  token.hxx
libs/autocog/compiler/stl/ast/: annot.hxx  channel.hxx  define.hxx  expr.cxx  expr.hxx  flow.hxx  macros.hxx  nodes.def  path.hxx  printer.hxx  program.cxx  program.hxx  prompt.hxx  record.hxx  return.hxx  search.hxx  struct.hxx  tostring.cxx  tostring.hxx  traits.hxx
libs/autocog/compiler/stl/compile/: assemble.cxx  generate.cxx  globals.cxx  instantiate.cxx  parse.cxx  symbols.cxx
libs/autocog/compiler/stl/parser/: alias.cxx  annotate.cxx  assign.cxx  call.cxx  channel.cxx  clauses.cxx  define.cxx  export.cxx  expression.cxx  field.cxx  fieldref.cxx  flow.cxx  format.cxx  import.cxx  kwarg.cxx  link.cxx  objectref.cxx  path.cxx  program.cxx  prompt.cxx  promptref.cxx  record.cxx  return.cxx  search.cxx  struct.cxx
libs/autocog/compiler/stl/serialize/: ast.cxx  globals.cxx  graph.cxx  helpers.hxx  ir.cxx  sta.cxx  symbols.cxx
libs/autocog/data/: CMakeLists.txt  base.hxx  base.txx  channel.cxx  channel.hxx  diagnostic.hxx  fta.cxx  fta.hxx  ftt.cxx  ftt.hxx  metadata.hxx  metadata.txx  path.cxx  path.hxx  registry.hxx  registry.txx  search.cxx  search.hxx  sta.cxx  sta.hxx  store.cxx  store.hxx  syntax.cxx  syntax.hxx  utility.cxx  utility.hxx  vocab.cxx  vocab.hxx
libs/autocog/llama/: CMakeLists.txt  evaluation-choice.cxx  evaluation-completion.cxx  evaluation-text.cxx  evaluation.cxx  evaluation.hxx  evaluator.cxx  evaluator.hxx  fta.cxx  fta.hxx  ftt.cxx  ftt.hxx  manager.cxx  manager.hxx  model.cxx  model.hxx  python_bindings.cxx  tokenizer.cxx  tokenizer.hxx  types.hxx
libs/autocog/llama/xfta/: CMakeLists.txt  evaluation-choice.cxx  evaluation-completion.cxx  evaluation-text.cxx  evaluation.cxx  evaluation.hxx  fta.cxx  fta.hxx  ftt.cxx  ftt.hxx  manager.cxx  manager.hxx  model.cxx  model.hxx  types.hxx
libs/autocog/parser/: CMakeLists.txt
libs/autocog/parser/stl/: binding.cxx  diagnostic.cxx  diagnostic.hxx  ir.hxx  lexer.cxx  lexer.hxx  lexer.l  location.hxx  main.cxx  parser.cxx  parser.hxx  token.cxx  token.hxx
libs/autocog/parser/stl/ir/: annot.hxx  channel.hxx  define.hxx  expr.hxx  flow.hxx  path.hxx  program.cxx  program.hxx  prompt.hxx  record.hxx  return.hxx  search.hxx  struct.hxx
libs/autocog/runtime/frame/: CMakeLists.txt  frame.cxx  frame.hxx  stack.hxx
libs/autocog/runtime/sta/: CMakeLists.txt  channel.hxx  instantiate.cxx  instantiate.hxx  load.cxx  load.hxx  parse.cxx  parse.hxx  path.hxx  search.hxx  sta.cxx  state.hxx  syntax.hxx  value.hxx  walk.cxx  walk.hxx
libs/autocog/runtime/store/: CMakeLists.txt  store.cxx  store.hxx
libs/autocog/utilities/: CMakeLists.txt  errors.hxx  exception.cxx  exception.hxx  location.hxx  metadata.cxx  metadata.hxx  types.hxx
modules/autocog/: __init__.py  __main__.py  _json_formatter.py  _schema.py  (+9 more)
modules/autocog.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
scripts/: dump_sta_to_json.py  execute_sta_with_llama_cpp.py  sanity-check.sh
tests/: README.md  coverage.md  coverage.sh  coverage_report.py  fuzz.sh  golden_compare.py  parse_sta_files.py  requirements.txt  update-golden.sh
tests/units/autocog/compiler/stl/parser/: CMakeLists.txt  driver.cxx
tests/units/autocog/compiler/stl/parser/inputs/: aliases.json  annotations.json  clauses.json  defines.json  exports.json  expressions.json  fields.json  formats.json  identifiers.json  imports.json  prompts.json  records.json  returns.json  structs.json
tests/units/libs/autocog/data/: CMakeLists.txt  data_smoke_driver.cxx  registry_driver.cxx
tests/units/libs/autocog/utilities/: CMakeLists.txt  backtrace_driver.cxx
tools/: fta2dot.py  ir2stl.py  sta2dot.py
tools/ista/: CMakeLists.txt  main.cxx
tools/psta/: CMakeLists.txt  main.cxx
tools/stlc/: CMakeLists.txt  args.cxx  convert.cxx  convert.hxx  main.cxx  unparse-ir.py
tools/xfta/: CMakeLists.txt  convert.cxx  convert.hxx  main.cxx
(+403 files in other folders)
