[build-system]
requires = [
    "setuptools>=64",
    "wheel",
    "pybind11>=2.6.0",
    "cmake>=3.18"
]
build-backend = "setuptools.build_meta"

[project]
name = "autocog"
dynamic = ["version"]
description = "Automaton & Cognition: programming models for language models"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    {name = "Tristan Vanderbruggen", email = "vanderbrugge1@llnl.gov"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.urls]
Homepage = "https://github.com/LLNL/autocog/"

[tool.setuptools.dynamic]
version = {file = "VERSION"}

[tool.setuptools.packages.find]
where = ["modules"]
include = ["autocog", "autocog.*"]

[tool.setuptools.package-dir]
"" = "modules"

[tool.pytest.ini_options]
testpaths = ["tests/integration/modules", "tests/units/modules"]

