[build-system]
requires = [
    "scikit-build-core>=0.10",
    "pybind11>=2.6.0",
]
build-backend = "scikit_build_core.build"

[project]
name = "autocog"
dynamic = ["version"]
description = "Automaton & Cognition: programming models for language models"
readme = "README.md"
license = {text = "Apache 2.0"}
authors = [
    {name = "Tristan Vanderbruggen", email = "vanderbrugge1@llnl.gov"}
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: C++",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
requires-python = ">=3.10"
dependencies = [
    "numpy",
]

[project.optional-dependencies]
validate = ["jsonschema>=4.18", "referencing"]
server = ["fastapi>=0.100", "uvicorn>=0.20", "jsonschema>=4.18", "referencing"]

[project.urls]
Homepage = "https://github.com/LLNL/autocog/"

[project.scripts]
autocog = "autocog.__main__:main"

[tool.scikit-build]
wheel.packages = ["modules/autocog"]
cmake.build-type = "Release"
metadata.version.provider = "scikit_build_core.metadata.regex"
metadata.version.input = "VERSION"
metadata.version.regex = "v?(?P<value>\\d+\\.\\d+\\.\\d+)"

[tool.pytest.ini_options]
testpaths = ["tests/integration/modules", "tests/units/modules"]

